# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.130 2008-07-15 22:01:44 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.2.8 (2008/??/??)
 - (2008/06/20) Fixed bug# 3079 - Default CheckEmailInvalidAddress regexp
    rejects mail to MobileMe (me.com) accounts.
 - (2008/06/20) Fixed bug# 3000 - Configured sender address for auto response
    get's ignored.
 - (2008/07/08) Fixed bug# 3062 - Not possible to search for Customer Company
 - (2008/06/25) Increaded max size of reformated text (reformating new lines)
    from 20,000 to 60,000 signs (this size is just a safty performance
    setting in Kernel::Output::HTML::Layout::Ascii2Html()).
 - (2008/06/20) Fixed bug# 3000 - Configured sender address for auto response
    get's ignored.
 - (2008/06/05) Fixed bug# 2962 - Freetext cache problem, old used ticket
    free text values get not added to pull down list in agent ticket search.
 - (2008/06/04) Removed not wanted email rfc check in AgentTicketPhone and
    AgentTicketEmail, it's already done by OTRS via config settings.

2.2.7 (2008/06/04)
 - (2008/05/28) Fixed bug# 2891 - Typo in Bounce Customer notification
    'informations'.
 - (2008/05/25) Fixed bug# 2934 - PostmasterPOP3.pl - craches on malformed UTF-8
    character (fatal)... on incoming emails.
 - (2008/05/22) Fixed bug# 2829 - Added config option if Cc should be taken over
    to Cc recipients list in compose email answer screen.
    SysConfig -> Ticket -> Frontend::Agent::Ticket::ViewCompose ->
    Ticket::Frontend::ComposeExcludeCcRecipients
 - (2008/05/15) Fixed bug# 2870 - Customer-Frontend: No Access to Company Tickets
    (CustomerIDCheck fails).
 - (2008/05/09) Added new catalonian language translation, thanks to Antonio Linde!